--- a/DurableWebSample/DurableWebSample.csproj
+++ b/DurableWebSample/DurableWebSample.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>    
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.2" />
-  </ItemGroup>
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.7" />
+ <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.1.0-beta2" /> </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
