--- a/DurableWebSample/DurableWebSample.csproj
+++ b/DurableWebSample/DurableWebSample.csproj
@@ -4,7 +4,8 @@
   </PropertyGroup>
   <ItemGroup>    
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.7" />
- <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.1.0-beta2" /> </ItemGroup>
+ <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.1.0-beta2" />
+ <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta3" /> </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
